--- a/YGGG/YGGG/Launch Screen.storyboard
+++ b/YGGG/YGGG/Launch Screen.storyboard
@@ -2,7 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,28 +15,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="yggg_fridge" translatesAutoresizingMaskIntoConstraints="NO" id="zGD-pl-tGe">
-                                <rect key="frame" x="46.666666666666657" y="276" width="300" height="300"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="300" id="MEG-Ll-KVg"/>
-                                    <constraint firstAttribute="height" constant="300" id="Uz2-fJ-z95"/>
-                                </constraints>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="yggg_fridge" translatesAutoresizingMaskIntoConstraints="NO" id="XJI-Bm-q3S">
+                                <rect key="frame" x="111" y="340.66666666666669" width="171" height="171"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="zGD-pl-tGe" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="P0m-Xp-VxS"/>
-                            <constraint firstItem="zGD-pl-tGe" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="fK1-CS-q1v"/>
+                            <constraint firstItem="XJI-Bm-q3S" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="9qw-kv-DOE"/>
+                            <constraint firstItem="XJI-Bm-q3S" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="RwD-2a-uiX"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.671755725190835" y="374.64788732394368"/>
         </scene>
     </scenes>
     <resources>
-        <image name="yggg_fridge" width="512" height="512"/>
+        <image name="yggg_fridge" width="170.66667175292969" height="170.66667175292969"/>
     </resources>
 </document>
