--- a/YGGG/YGGG/Launch Screen.storyboard
+++ b/YGGG/YGGG/Launch Screen.storyboard
@@ -2,7 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,15 +15,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="yggg_fridge" translatesAutoresizingMaskIntoConstraints="NO" id="XJI-Bm-q3S">
-                                <rect key="frame" x="111" y="340.66666666666669" width="171" height="171"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="yggg_fridge" translatesAutoresizingMaskIntoConstraints="NO" id="Ahc-ry-On6">
+                                <rect key="frame" x="111.33333333333333" y="340.66666666666669" width="170.66666666666669" height="170.66666666666669"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="XJI-Bm-q3S" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="9qw-kv-DOE"/>
-                            <constraint firstItem="XJI-Bm-q3S" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="RwD-2a-uiX"/>
+                            <constraint firstItem="Ahc-ry-On6" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="FiF-Nd-ts2"/>
+                            <constraint firstItem="Ahc-ry-On6" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="NEA-Jg-tgp"/>
                         </constraints>
                     </view>
                 </viewController>
